Updates contact form following formspree policies

--- a/Website/i18n/en.yaml
+++ b/Website/i18n/en.yaml
@@ -1,5 +1,11 @@
 - id: contactForm
   translation: "Drop us a line"
+- id: contactName
+  translation: "Your name"
+- id: contactMail
+  translation: "Your email"
+- id: contactMessage
+  translation: "Your message"
 - id: contactSend
   translation: "Send message"
 - id: readMore
