Updates language selector on model page

--- a/Website/i18n/en.yaml
+++ b/Website/i18n/en.yaml
@@ -12,3 +12,5 @@
   translation: "Read more"
 - id: continueReading
   translation: "Continue reading"
+- id: selectLanguage
+  translation: "Select a language"
